--- a/src/app/shared/layout-page/layout-page.component.html
+++ b/src/app/shared/layout-page/layout-page.component.html
@@ -1,17 +1,37 @@
 <div class="flex flex-col min-h-screen bg-background">
   <!-- Cabecera -->
   <header class="bg-dark text-white px-4 py-3 flex items-center justify-between lg:px-16">
-    <!-- Botón del Sidebar -->
-    <button class="block lg:hidden" (click)="toggleSidebar()">
-      <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-      </svg>
-    </button>
-    <!-- Logo -->
+    <!-- Contenedor para el botón del menú o la flecha atrás, y el título -->
     <div class="flex items-center">
-      <img src="assets/images/logo.png" alt="Sequence Music Logo" class="h-8 lg:h-10 w-auto">
-      <h3 class="text-primary ml-2 hidden lg:block">| MUSIC</h3>
+      <!-- Logo (visible solo en grandes pantallas) -->
+      <div class="items-center hidden lg:flex">
+        <img src="assets/images/logo.png" alt="Sequence Music Logo" class="h-8 lg:h-10 w-auto" />
+      </div>
+
+      <!-- Condición para mostrar botón del menú o flecha atrás -->
+      <div *ngIf="!isMainRoute; else menuButton">
+        <!-- Botón para volver atrás -->
+        <button class="block lg:hidden" (click)="navigateBack()">
+          <svg class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.75 19.5L8.25 12l7.5-7.5"></path>
+          </svg>
+        </button>
+      </div>
+      <ng-template #menuButton>
+        <!-- Botón del menú -->
+        <button class="block lg:hidden" (click)="toggleSidebar()">
+          <svg class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+          </svg>
+        </button>
+      </ng-template>
+
+      <!-- Título de la página pegado al botón -->
+      <h3 class="ml-2 text-primary lg:hidden">
+        {{ pageTitle }}
+      </h3>
     </div>
+
     <!-- Menú a la derecha del icono en ordenadores -->
     <nav class="hidden lg:flex items-center space-x-4">
       <!-- Menú -->
@@ -23,9 +43,9 @@
       <!-- Banderas -->
       <div class="flex items-center space-x-2">
         <!-- Bandera de España -->
-        <img src="/assets/images/es-flag.png" alt="Bandera de España" (click)="changeLanguage('es')" class="h-6 cursor-pointer">
+        <img src="/assets/images/es-flag.png" alt="Bandera de España" (click)="changeLanguage('es')" class="h-6 cursor-pointer" [class.active-flag]="getCurrentLanguage() === 'es'" />
         <!-- Bandera de Estados Unidos -->
-        <img src="/assets/images/us-flag.png" alt="Bandera de Estados Unidos" (click)="changeLanguage('us')" class="h-6 cursor-pointer">
+        <img src="/assets/images/us-flag.png" alt="Bandera de Estados Unidos" (click)="changeLanguage('us')" class="h-6 cursor-pointer" [class.active-flag]="getCurrentLanguage() === 'us'" />
       </div>
     </nav>
   </header>
@@ -36,7 +56,7 @@
   </div>
 
   <!-- Contenido principal -->
-  <main class="flex-1 px-4 py-8 md:px-8 lg:px-16">
+  <main class="flex-1 px-4 py-8 lg:px-16">
     <router-outlet></router-outlet>
   </main>
 
