fix: Resuelto el manejo de edición de canciones y mejorada la lógica del formulario
- Se ha corregido el flujo para editar canciones, asegurando que el ID se maneje correctamente en el formulario y en las acciones de actualización.
- Implementada la lógica para determinar y manejar el modo de edición basado en la presencia de un ID de canción.
- Mejorado el método `setFormValues` para asignar valores al formulario y establecer el modo de edición.
- Modificado el método `onSubmit` para incluir el ID de la canción en los datos enviados durante la actualización.
- Ajustes menores en el manejo de los artistas seleccionados y géneros para garantizar una experiencia de usuario fluida y consistente en la interfaz del formulario.

--- a/src/app/shared/layout-page/layout-page.component.html
+++ b/src/app/shared/layout-page/layout-page.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col min-h-screen bg-background">
   <!-- Cabecera -->
-  <header class="bg-dark text-white px-4 py-3 flex items-center justify-between lg:px-16">
+  <header class="bg-dark text-white px-4 py-3 flex items-center justify-between">
     <!-- Contenedor para el botón del menú o la flecha atrás, y el título -->
     <div class="flex items-center">
       <!-- Logo (visible solo en grandes pantallas) -->
